--- a/social.html
+++ b/social.html
@@ -48,8 +48,7 @@
 	<li><a href="https://www.icloud.com/photostream/#ABGWZuqDGvA6y3">Icloud</a></li>
 	<li><a href="http://www.advocare.com/15126203">Lisa&#39;s Advocare Storefront</a></li>
 	<li><a href="http://www.teambeachbody.com/dashboard">Beach Bodies Storefront</a></li>
-	<li><a href="http://www.aavart.org">Ausable Artisan Village</a></li>
-</ul>
+	<li><a href="http://lisabalbachepiphanyblog.wordpress.com">Epiphany (Lisa's Blog)</a></li></ul>
 </section>
 <section class="col-5" >
        <div class="slider">
