--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 		    }
 		}
 	</script>
-<header>
-	<h1  class="col-12">Lisa Balbach</h1>
-	<h3 class="col-12 orange">Educator, Web Programmer, Designer, Photographer, Digital Artist</h3>
+<header class="orange col-12">
+	<table style="width:100%;">
+	<tr><td><h1 style="width:80%;">Lisa Balbach</h1></td>
+	<td rowspan="2"><img src="media/white-logo.png" style="float:right;" alt="through the looking glass logo">
+  	</td></tr>	
+  	<tr><td><h3>Educator, Web Programmer, Designer, Photographer, Digital Artist</h3></td></tr>
+	</table>
 </header>
 
 <main style="background-color:black;">
@@ -55,19 +59,22 @@
 
 	<summary >About...</summary>
 
-	<p class="whiteBack">Lisa grew up in the suburbs of Minneapolis, Minnesota. She received her first camera for her tenth birthday and has been taking photographs 
-
-	ever since. She received a bachelors and master&rsquo;s degree from the University of Minnesota. She has also received continuing education 
-
-	credentials from the IWA (International Webmaster Association), Gnomon School of Visual Effects and CIW (Certified Internet Web Professional). 
-
-	Lisa moved to Michigan in 1991 which is when she got married and started teaching college-level computer courses. Lisa is a full-time computer
-
-	instructor and teaches a wide variety of computer courses including web design, web programming, traditional programming and digital art classes. She is currently teaching 
-	
-	web development courses and resides in the Traverse City area with her husband. She spends her free time on her photography, digital artwork, animation and web 
-
-	design work. She tries to work out every day and she enjoys cooking and creating new recipes for her family to try.</p>
+	<p class="whiteBack">I grew up in the suburbs of Minneapolis, Minnesota and received a bachelors and master&rsquo;s degree from the University of Minnesota.&nbsp;
+	<br><br>I started my career as a programmer/analyst and discovered a love of 
+	teaching and training.&nbsp; I decided pursue a masters degree and once I 
+	obtained it, I made the move into teaching at the college level.&nbsp;&nbsp;
+	<br><br>In 1991, I moved to Michigan, got married and started teaching 
+	college-level computer courses.&nbsp; I have taught a variety of computer 
+	courses for over 20 years including web programming, traditional 
+	programming, database, office and graphic design courses. <br><br>I am 
+	currently teaching web development/programming and database design courses 
+	at a community college and I reside in the Traverse City area with my 
+	husband.&nbsp; I also serve as a subject matter consultant for 
+	Pearson/Certiport and work on certification exam questions and technical 
+	reviews.&nbsp; I have several different MTA and MOS certifications in 
+	addition to an MCE certification.<br><br>In my limited free time, I work out 
+	( cardio and weights) and I enjoy working on my photography, digital 
+	artwork, animation and web design work. </p>
 
 </details>
 
@@ -75,7 +82,7 @@
 
 	<summary>Artist Statement...</summary>
 
-	<p class="whiteBack">Photography has been my passion ever since I was ten years old. For me, it has always been a form of self-expression. 
+	<p class="whiteBack">When I was ten years old, I received my first camera.&nbsp; Photography has been my passion ever since. For me, it has always been a form of self-expression. 
 
 	It is a window into my reality and interpretation of the world around me. I use it to explore thoughts, feelings, ideas 
 
@@ -89,7 +96,9 @@
 
 	patterns, lighting and interesting shapes and lines. Macro photography lets me convey these intricate details and explore how each 
 
-	element interacts with the other. It allows me to share a hidden world we don&rsquo;t normally experience. I like to capture human dynamics, 
+	element interacts with the other. It allows me to share a hidden world we don&rsquo;t normally experience. I like to 
+	photograph animals and capture whatever emotion they are feeling in their 
+	natural habitat.&nbsp; I also like to capture human dynamics, 
 
 	feelings and emotions when people aren&rsquo;t aware they are being photographed. To me, that makes the photograph more real and it conveys a story.</p>
 
