--- a/social.html
+++ b/social.html
@@ -30,9 +30,13 @@
 		    }
 		}
 	</script>
-<header>
-	<h1  class="col-12">Lisa Balbach</h1>
-	<h3 class="col-12 orange">Educator, Web Programmer, Designer, Photographer, Digital Artist</h3>
+<header class="orange col-12">
+	<table style="width:100%;">
+	<tr><td><h1 style="width:80%;">Lisa Balbach</h1></td>
+	<td rowspan="2"><img src="media/white-logo.png" style="float:right;" alt="through the looking glass logo">
+  	</td></tr>	
+  	<tr><td><h3>Educator, Web Programmer, Designer, Photographer, Digital Artist</h3></td></tr>
+	</table>
 </header>
 
 <section id="main" class="col-7 white">
